sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__hidden_singles__tests__snapshots__execute__base_2_sample_2.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/hidden_singles.rs
description: Strategy HiddenSingles executed on grid base_2_sample_2
expression: "TransportDeductions::from(deductions.clone())"
info:
  grid_input:
    - ╔═══════════╦═══════════╗
    - ║   2 │   2 ║     │     ║
    - ║     │     ║  1  │     ║
    - ║ 3   │     ║     │ 3 4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │ 1 2 ║   2 │     ║
    - ║  4  │     ║     │     ║
    - ║     │     ║ 3   │ 3   ║
    - ╠═══════════╬═══════════╣
    - ║ 1   │ 1   ║     │     ║
    - ║     │     ║     │  2  ║
    - ║     │   4 ║ 3 4 │     ║
    - ║─────┼─────║─────┼─────║
    - ║ 1 2 │     ║     │ 1   ║
    - ║     │  3  ║     │     ║
    - ║     │     ║   4 │   4 ║
    - ╚═══════════╩═══════════╝
  grid_output:
    - ╔═══════════╦═══════════╗
    - ║     │   2 ║     │     ║
    - ║  3  │     ║  1  │  4  ║
    - ║     │     ║     │     ║
    - ║─────┼─────║─────┼─────║
    - ║     │     ║     │     ║
    - ║  4  │  1  ║  2  │     ║
    - ║     │     ║     │ 3   ║
    - ╠═══════════╬═══════════╣
    - ║ 1   │     ║     │     ║
    - ║     │  4  ║  3  │  2  ║
    - ║     │     ║     │     ║
    - ║─────┼─────║─────┼─────║
    - ║     │     ║     │     ║
    - ║  2  │  3  ║     │  1  ║
    - ║     │     ║   4 │     ║
    - ╚═══════════╩═══════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 0
        candidates:
          - 3
    actions:
      - position:
          row: 0
          column: 0
        setValue: 3
  - reasons:
      - position:
          row: 0
          column: 3
        candidates:
          - 4
    actions:
      - position:
          row: 0
          column: 3
        setValue: 4
  - reasons:
      - position:
          row: 1
          column: 1
        candidates:
          - 1
    actions:
      - position:
          row: 1
          column: 1
        setValue: 1
  - reasons:
      - position:
          row: 1
          column: 2
        candidates:
          - 2
    actions:
      - position:
          row: 1
          column: 2
        setValue: 2
  - reasons:
      - position:
          row: 2
          column: 1
        candidates:
          - 4
    actions:
      - position:
          row: 2
          column: 1
        setValue: 4
  - reasons:
      - position:
          row: 2
          column: 2
        candidates:
          - 3
    actions:
      - position:
          row: 2
          column: 2
        setValue: 3
  - reasons:
      - position:
          row: 3
          column: 0
        candidates:
          - 2
    actions:
      - position:
          row: 3
          column: 0
        setValue: 2
  - reasons:
      - position:
          row: 3
          column: 3
        candidates:
          - 1
    actions:
      - position:
          row: 3
          column: 3
        setValue: 1
