sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__hidden_singles__tests__snapshots__execute__base_3_sample_3.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/hidden_singles.rs
description: Strategy HiddenSingles executed on grid base_3_sample_3
expression: "TransportDeductions::from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │   3 │     ║     │   3 │     ║     │     │     ║
    - ║     │   6 │  4  ║  5  │     │  2  ║  1  │  7  │  8  ║
    - ║   9 │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │  2  │  2  ║     │     │     ║  2  │     │     ║
    - ║  1  │   6 │  56 ║   6 │  9  │ 4 6 ║     │  3  │  56 ║
    - ║     │  8  │ 78  ║ 7   │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  23 │  23 ║     │ 1 3 │ 1   ║  2  │     │     ║
    - ║  5  │   6 │  56 ║  8  │     │   6 ║     │  56 │  4  ║
    - ║ 7 9 │     │ 7 9 ║     │ 7   │ 7   ║   9 │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │  23 │  23 ║     │     │ 1   ║   3 │     │   3 ║
    - ║  6  │     │     ║  4  │  5  │     ║     │     │     ║
    - ║     │     │   9 ║     │     │ 78  ║ 7 9 │  89 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │     ║   3 │     │     ║
    - ║  5  │  7  │  5  ║  9  │     │   6 ║ 4   │  1  │  2  ║
    - ║     │     │     ║     │  8  │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  8  │ 4   │  1  ║  2  │     │  3  ║  5  │ 4 6 │   6 ║
    - ║     │     │     ║     │ 7   │     ║     │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 12  │  2  ║ 1   │ 12  │ 1   ║   3 │     │     ║
    - ║  4  │   6 │   6 ║     │     │  5  ║     │  5  │  9  ║
    - ║     │  8  │ 78  ║ 7   │ 78  │ 78  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║ 1   │     │ 1   ║     │     │     ║
    - ║  3  │  5  │     ║     │  6  │ 4   ║  8  │ 4   │  7  ║
    - ║     │     │     ║     │     │   9 ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │ 1   │ 1   ║     │     │ 1   ║
    - ║     │  9  │     ║  3  │ 4   │ 45  ║  6  │  2  │  5  ║
    - ║ 7   │     │ 78  ║     │ 78  │ 78  ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │   3 │     ║     │     │     ║
    - ║  9  │  6  │  4  ║  5  │     │  2  ║  1  │  7  │  8  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║  2  │     │     ║
    - ║  1  │     │  5  ║  6  │  9  │  4  ║     │  3  │  5  ║
    - ║     │  8  │ 78  ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │   3 │   3 ║     │ 1 3 │     ║     │     │     ║
    - ║  2  │     │  5  ║  8  │     │     ║     │  56 │  4  ║
    - ║     │     │ 7   ║     │     │ 7   ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │  2  │     ║     │     │     ║     │     │     ║
    - ║  6  │     │  9  ║  4  │  5  │  1  ║  7  │  8  │  3  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │     ║     │     │     ║
    - ║  5  │  7  │  5  ║  9  │     │  6  ║  4  │  1  │  2  ║
    - ║     │     │     ║     │  8  │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  8  │  4  │  1  ║  2  │  7  │  3  ║  5  │  9  │   6 ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  4  │  1  │   6 ║     │  2  │  5  ║  3  │  5  │  9  ║
    - ║     │     │ 78  ║ 7   │     │ 78  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║ 1   │     │     ║     │     │     ║
    - ║  3  │  5  │  2  ║     │  6  │  9  ║  8  │  4  │  7  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║     │  9  │     ║  3  │  4  │  5  ║  6  │  2  │  1  ║
    - ║ 7   │     │ 78  ║     │     │ 78  ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 0
        candidates:
          - 9
    actions:
      - position:
          row: 0
          column: 0
        setValue: 9
  - reasons:
      - position:
          row: 0
          column: 1
        candidates:
          - 6
    actions:
      - position:
          row: 0
          column: 1
        setValue: 6
  - reasons:
      - position:
          row: 1
          column: 3
        candidates:
          - 6
    actions:
      - position:
          row: 1
          column: 3
        setValue: 6
  - reasons:
      - position:
          row: 1
          column: 5
        candidates:
          - 4
    actions:
      - position:
          row: 1
          column: 5
        setValue: 4
  - reasons:
      - position:
          row: 2
          column: 0
        candidates:
          - 2
    actions:
      - position:
          row: 2
          column: 0
        setValue: 2
  - reasons:
      - position:
          row: 3
          column: 2
        candidates:
          - 9
    actions:
      - position:
          row: 3
          column: 2
        setValue: 9
  - reasons:
      - position:
          row: 3
          column: 5
        candidates:
          - 1
    actions:
      - position:
          row: 3
          column: 5
        setValue: 1
  - reasons:
      - position:
          row: 3
          column: 6
        candidates:
          - 7
    actions:
      - position:
          row: 3
          column: 6
        setValue: 7
  - reasons:
      - position:
          row: 3
          column: 7
        candidates:
          - 8
    actions:
      - position:
          row: 3
          column: 7
        setValue: 8
  - reasons:
      - position:
          row: 3
          column: 8
        candidates:
          - 3
    actions:
      - position:
          row: 3
          column: 8
        setValue: 3
  - reasons:
      - position:
          row: 4
          column: 5
        candidates:
          - 6
    actions:
      - position:
          row: 4
          column: 5
        setValue: 6
  - reasons:
      - position:
          row: 4
          column: 6
        candidates:
          - 4
    actions:
      - position:
          row: 4
          column: 6
        setValue: 4
  - reasons:
      - position:
          row: 5
          column: 1
        candidates:
          - 4
    actions:
      - position:
          row: 5
          column: 1
        setValue: 4
  - reasons:
      - position:
          row: 5
          column: 4
        candidates:
          - 7
    actions:
      - position:
          row: 5
          column: 4
        setValue: 7
  - reasons:
      - position:
          row: 5
          column: 7
        candidates:
          - 9
    actions:
      - position:
          row: 5
          column: 7
        setValue: 9
  - reasons:
      - position:
          row: 6
          column: 1
        candidates:
          - 1
    actions:
      - position:
          row: 6
          column: 1
        setValue: 1
  - reasons:
      - position:
          row: 6
          column: 4
        candidates:
          - 2
    actions:
      - position:
          row: 6
          column: 4
        setValue: 2
  - reasons:
      - position:
          row: 6
          column: 6
        candidates:
          - 3
    actions:
      - position:
          row: 6
          column: 6
        setValue: 3
  - reasons:
      - position:
          row: 7
          column: 2
        candidates:
          - 2
    actions:
      - position:
          row: 7
          column: 2
        setValue: 2
  - reasons:
      - position:
          row: 7
          column: 5
        candidates:
          - 9
    actions:
      - position:
          row: 7
          column: 5
        setValue: 9
  - reasons:
      - position:
          row: 7
          column: 7
        candidates:
          - 4
    actions:
      - position:
          row: 7
          column: 7
        setValue: 4
  - reasons:
      - position:
          row: 8
          column: 4
        candidates:
          - 4
    actions:
      - position:
          row: 8
          column: 4
        setValue: 4
  - reasons:
      - position:
          row: 8
          column: 8
        candidates:
          - 1
    actions:
      - position:
          row: 8
          column: 8
        setValue: 1
